2013-06-10 Miguel de Dios <miguel.dedios@artica.es>

	* include/javascript/jquery.ui-timepicker-addon.js: updated the
	datepicker for to avoid some found bugs.
	
	* include/javascript/i18n: added translations for the datepicker.
	
	* godmode/alerts/configure_alert_template.php,
	godmode/reporting/reporting_builder.item_editor.php,
	godmode/agentes/planned_downtime.editor.php,
	include/ajax/module.php, include/functions_ui.php,
	operation/tree.php, operation/agentes/status_monitor.php,
	operation/agentes/datos_agente.php,
	operation/reporting/reporting_viewer.php,
	operation/reporting/graph_viewer.php, extensions/insert_data.php:
	changed the code for to use the user/system language in the
	datepicker.

2013-06-10  Sergio Martin <sergio.martin@artica.es>

	* include/styles/jquery-ui-1.10.0.custom.css
	include/styles/pandora.css
	include/ajax/events.php
	include/functions_graph.php
	include/functions_events.php
	include/functions_networkmap.php
	include/functions_netflow.php
	operation/tree.php
	operation/events/events.build_table.php
	operation/reporting/reporting_viewer.php
	operation/agentes/status_monitor.php
	operation/agentes/stat_win.php
	operation/netflow/nf_live_view.php
	images/header_refresh_disabled.png
	images/image_problem_data.png
	images/input_pdf.png
	images/input_delete.png
	general/header.php
	godmode/users/user_list.php
	godmode/events/event_edit_filter.php
	godmode/events/event_responses.list.php
	godmode/events/events.php: Fix a lot of aesthetic issues and other
	little fixes

2013-06-10 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_ui.php: fixed the reload the widget autocomplete
	when select a item from the list instead from writing all name.

2013-06-10 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_html.php, include/functions_reporting.php,
	include/graphs/functions_utils.php, include/graphs/fgraph.php,
	include/graphs/functions_pchart.php: fixed the graphs in the
	reports.
