@@ -187,8 +187,12 @@ if (is_ajax ())
 				$agent_info["modules"] = $row["total_count"];
 				
 				$agent_info["alert_img"] = agents_tree_view_alert_img ($agent_info["monitor_alertsfired"]);
-				$agent_info["status_img"] = agents_tree_view_status_img ($agent_info["monitor_critical"], $agent_info["monitor_warning"], $agent_info["monitor_unknown"].
-																		$agent_info["modules"], $agent_info["monitor_notinit"]);
+				$agent_info["status_img"] = agents_tree_view_status_img(
+					$agent_info["monitor_critical"],
+					$agent_info["monitor_warning"],
+					$agent_info["monitor_unknown"],
+					$agent_info["modules"],
+					$agent_info["monitor_notinit"]);
 				
 				// Filter by status (only in policy view)
 				if ($type == 'policies') {
