@@ -1,3 +1,10 @@
+2013-06-11 Miguel de Dios <miguel.dedios@artica.es>
+
+	* include/functions_html.php: revert my own changes in
+	"html_print_image", the code didn't run fine.
+	
+	* operation/tree.php: fixed the params to call the function.
+
 2013-06-10 Miguel de Dios <miguel.dedios@artica.es>
 
 	* include/javascript/jquery.ui-timepicker-addon.js: updated the
